fixed back button z-index

--- a/react-vite/src/components/Gameplay/Gameplay.css
+++ b/react-vite/src/components/Gameplay/Gameplay.css
@@ -80,12 +80,13 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    z-index: 2;
 
     transition: 0.3s ease;
 }
 
 .gameplay .left i:hover {
-    background-color: rgba(128, 128, 128, 0.288);
+    background-color: rgba(138, 138, 138, 0.288);
 }
 
 .gameplay .right {
@@ -338,7 +339,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 3;
+    z-index: 10;
     backdrop-filter: blur(10px);
 }
 
@@ -516,7 +517,7 @@
 }
 
 .gameplay.pulse {
-    animation: backgroundPulse 0.3s ease;
+    animation: backgroundPulse 0.4s ease;
   }
 
   @keyframes backgroundPulse {
@@ -524,7 +525,7 @@
       filter: brightness(1);
     }
     50% {
-      filter: brightness(1.3); /* Slightly brighten the background */
+      filter: brightness(1.7); /* Slightly brighten the background */
     }
     100% {
       filter: brightness(1);
